Fixed Follow Ship Scrollbar Issue
- Set Dash element to overflow:hidden

--- a/client/equinox.css
+++ b/client/equinox.css
@@ -4,15 +4,6 @@ html, body {
   margin: 0;
 }
 
-.hud {
-  background-color: black;
-  height: 100%;
-  width: 100%;
-  
-  color: white;
-  font-family: monospace;
-}
-
 @keyframes pulsate {
   0%   {opacity: 0;}
   75%  {opacity: 1;}
